Allow all origin patterns in CorsConfig